fixed invisible header menu on tiny screens

--- a/front-end-sources/styles/main.styl
+++ b/front-end-sources/styles/main.styl
@@ -26,6 +26,9 @@ html, body
 #header
 	margin-bottom 1em
 
+#header-menu
+	display block !important
+
 label-stretch()
 	label
 		width 100%
